{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 1238,
  "lineage": "6cc94738-f852-3663-5533-c6bc9dd01c18",
  "resources": [
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:313196411727:security-group/sg-07331c4b32f3b8a48",
            "description": "Allow NFS access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07331c4b32f3b8a48",
            "ingress": [],
            "name": "efs-sg",
            "name_prefix": "",
            "owner_id": "313196411727",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "efs-sg"
            },
            "tags_all": {
              "Name": "efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-042d112fd6f2c17c7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "313196411727",
            "id": "sg-07331c4b32f3b8a48",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:313196411727:security-group/sg-0536cca1f320b110a",
            "description": "Security group for RDS database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0536cca1f320b110a",
            "ingress": [],
            "name": "wordpress-rds-sg",
            "name_prefix": "",
            "owner_id": "313196411727",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-rds-sg"
            },
            "tags_all": {
              "Name": "wordpress-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-042d112fd6f2c17c7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "313196411727",
            "id": "sg-0536cca1f320b110a",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:313196411727:security-group/sg-0b41c6f797e0b671c",
            "description": "Allow the ALB to recieve ingress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b41c6f797e0b671c",
            "ingress": [],
            "name": "wordpress-alb-sg",
            "name_prefix": "",
            "owner_id": "313196411727",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WordPress ALB SG"
            },
            "tags_all": {
              "Name": "WordPress ALB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-042d112fd6f2c17c7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "313196411727",
            "id": "sg-0b41c6f797e0b671c",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:313196411727:subnet/subnet-060f2d9e0e7cc135c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060f2d9e0e7cc135c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313196411727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "Private subnet data"
            },
            "tags_all": {
              "Name": "Private subnet data"
            },
            "vpc_id": "vpc-042d112fd6f2c17c7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "313196411727",
            "id": "subnet-060f2d9e0e7cc135c",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": "eu-west-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:313196411727:subnet/subnet-0e5e27d5e57d22edd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.202.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5e27d5e57d22edd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313196411727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "Private subnet data"
            },
            "tags_all": {
              "Name": "Private subnet data"
            },
            "vpc_id": "vpc-042d112fd6f2c17c7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "313196411727",
            "id": "subnet-0e5e27d5e57d22edd",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:313196411727:subnet/subnet-01736d3ad2e1019d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01736d3ad2e1019d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "313196411727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "Public subnet web"
            },
            "tags_all": {
              "Name": "Public subnet web"
            },
            "vpc_id": "vpc-042d112fd6f2c17c7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "313196411727",
            "id": "subnet-01736d3ad2e1019d8",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:313196411727:vpc/vpc-042d112fd6f2c17c7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f58152048a886463",
            "default_route_table_id": "rtb-00541f80c1a66a0ed",
            "default_security_group_id": "sg-07348c9ab1a58c3a6",
            "dhcp_options_id": "dopt-08ca5e1b1f4eaf723",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-042d112fd6f2c17c7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00541f80c1a66a0ed",
            "owner_id": "313196411727",
            "region": "eu-west-2",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "313196411727",
            "id": "vpc-042d112fd6f2c17c7",
            "region": "eu-west-2"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}